# AgileQuery

./: .gitignore  README.md  design.md  handoff.md  pyproject.toml
app/: main.py
app/api/routes/: admin.py  query.py
app/core/: config.py  dependencies.py
app/domain/: errors.py  models.py
app/integrations/: database_connectors.py  llm_client.py
app/repositories/: catalog.py  connections.py  llm_config.py  prompt_config.py
app/schemas/: query.py
app/services/: phase1_retrieval.py  phase2_sql.py  phase3_execution.py  phase4_insight.py  pipeline.py  prompt_builder.py  sql_dialect.py
data/: catalog.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DatabaseFormDialog.vue  ImportTablesDialog.vue  LlmConfigDialog.vue  PromptConfigDialog.vue  SpaceFormDialog.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: databases.ts
frontend/src/views/: Chat.vue  DatabaseChat.vue  Home.vue  Metadata.vue  SpaceDetail.vue
tests/api/: test_admin.py  test_query_route.py
tests/unit/: test_catalog_repository.py  test_database_connectors.py  test_dependencies.py  test_llm_client.py  test_models.py  test_phase1_retrieval.py  test_phase2_sql.py  test_phase3_execution.py  test_pipeline.py  test_prompt_builder.py  test_sql_dialect.py
