[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agilequery-backend"
version = "0.1.0"
description = "Backend MVP scaffold for AgileQuery"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "sqlglot>=25,<26",
  "uvicorn>=0.30,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "pyodbc>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
